# omnilibris

./: .gitignore  Dockerfile  Taskfile.yml  package-lock.json  package.json  pyproject.toml
.github/: CODE_OF_CONDUCT.md
