[tool.poetry]
name = "omnilibris"
version = "0.1.0"
description = "omnilibris"
authors = ["Sett Sarverott <sarverott@gmail.com>"]
license = "agpl-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
docker = "^7.1.0"
podman = "^5.4.0.1"
flask = "^3.1.1"
lark = "^1.2.2"
gitpython = "^3.1.44"
pygithub = "^2.6.1"
beautifulsoup4 = "^4.13.4"
requests = "^2.32.3"
setuptools = "^80.8.0"
sphinx = "^8.2.3"
podman-compose = "^1.4.0"


[tool.poetry.group.dev.dependencies]
ollama = "^0.4.8"
openai = "^1.82.0"
huggingface-hub = "^0.32.0"
google-genai = "^1.16.1"
diffusers = "^0.33.1"
sagemaker = "^2.244.2"
transformers = "^4.52.3"
anthropic = "^0.52.0"
cohere = "^5.15.0"


[tool.poetry.group.publish.dependencies]
opentimestamps-client = "^0.7.2"
pythclient = "^0.2.2"
pytumblr = "^0.1.2"
lighthive = "^0.4.3"
solders = "^0.26.0"
solana = "^0.36.6"
anchorpy = "^0.21.0"
libtorrent = "^2.0.11"


[tool.poetry.group.examination.dependencies]
notebook = "^7.4.2"
astropy = "^7.1.0"
qutip = "^5.1.1"
pydrive = "^1.3.1"
matplotlib = "^3.10.3"
seaborn = "^0.13.2"
ipython = "^9.2.0"
pandas = "^2.2.3"


[tool.poetry.group.secure.dependencies]
vt-py = "^0.20.0"
shodan = "^1.31.0"
ngrok = "1.4.0"
sherlock = "^0.4.1"
stem = "^1.8.2"
scapy = "^2.6.1"
paramiko = "^3.5.1"



[tool.poetry.group.tooling.dependencies]
go-task-bin = "^3.43.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
